--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 				<div class="col-sm-8 ">
 					<b><span style="color: #149dcc;">Profile Summary:</span>&nbsp</b>
 					<ul>
-						<li>Having <span class="skill-highlight"> 4+ years </span> of experience in Software Testing, Quality Assurance. Proficient in SDLC & STLC</li> 
-						<li>Experience in <span class="skill-highlight"> Manual, API testing, SQL, Automation, and Agile Methodology </span></li>
+						<li>Having <span class="skill-highlight"> 6 years </span> of experience in Software Testing, Quality Assurance. Proficient in SDLC & STLC</li> 
+						<li>Experience in <span class="skill-highlight"> Manual, ADB commands (Android), API testing, SQL, Automation, and Agile Methodology </span></li>
 						<li>Hands-on experience on both <span class="skill-highlight"> WEB & Mobile Applications </span></li>
 						<li>Experienced in writing <span class="skill-highlight"> Test Scenarios, Test Cases, and Test Data </span> by using test case design techniques</li>
 						<li>Hands-on experience with performing <span class="skill-highlight"> Smoke, Sanity, Functional, Re-Testing, Regression testing & End-to-end testing </span></li>
@@ -68,9 +68,11 @@
 					
 					<b><span style="color: #149dcc;">Experience:</span>&nbsp</b>
 					<ul>
-						<li>Working as Senior Quality Analyst in Devrabbit IT Solutions (Dec 2021 – March 2023)</li>
-						<li>Worked as Test Engineer in Qik Circle (Oct 2020 – Dec 2021)</li>
-						<li>Worked in Jr Test Engineer in Energetic info solutions pvt ltd (July 2018 – July 2020)</li>
+						<li>Dec 24 – Till date: Deloitte, Hyderabad as Analyst Tester</li>
+						<li>Nov’23 – Oct’24: Unisys India Pvt Ltd, Hyderabad as Application Test Engineer </li>
+						<li>Dec’21 – March’23: Devrabbit IT Solutions Pvt Ltd, Hyderabad as Senior Quality Analyst</li>
+						<li>Oct’20 – Dec’21: Qik TechSoft Solutions Pvt Ltd, Delhi as Test Engineer</li>
+						<li>Jul’18 – Jul’20: Energetic Info Solutions Pvt. Ltd., Hyderabad as Jr. Test Engineer</li>
 					</ul>
 					
 				</div>
@@ -102,7 +104,7 @@
 				<b><span style="color: #149dcc;">IT Skills:</span>&nbsp</b>
 				<ul>
 					<li><i><span class="skill-highlight">Programming:</span></i> Core Java, ADB Commands (Android) </li>
-					<li><i><span class="skill-highlight">Automation:</span></i> Selenium, Data Driven, Page Object Model (POM), TestNG, Rest-Assured, Maven</li>
+					<li><i><span class="skill-highlight">Automation:</span></i> Selenium, Data Driven, Page Object Model (POM), Maven</li>
 					<li><i><span class="skill-highlight">Testing Tools:</span></i> Postman, SauceLabs, Eclipse</li>
 					<li><i><span class="skill-highlight">Database:</span></i> MySQL</li>
 					<li><i><span class="skill-highlight">CI/CD:</span></i> GitHub</li>
@@ -116,7 +118,7 @@
 		<div class="container-fluid resume-section" id="resume">
 			<div class="container">
 				<hr class="line" style="width: 40%;">
-				Download my Resume here: <a href="files/Prasad_QA_4+.pdf" download="Prasad_QA_4+.pdf"> G v v Prasad</a>
+				Download my Resume here: <a href="files/Prasad_QA_6.pdf" download="Prasad_QA_6.pdf"> G v v Prasad</a>
 				<hr class="line" style="width: 40%;">
 			</div>
 		</div>
